Update from November 18, 2022

--- a/69277-h/69277-h.htm
+++ b/69277-h/69277-h.htm
@@ -1322,7 +1322,7 @@ growing and rotting for many centuries, has left
 a thick black mould which is perhaps the richest
 wheat-soil in the world.  You will remember that
 Nature does nothing in a hurry, and except in parts
-of the unhealthy tropics were they die of fever,
+of the unhealthy tropics where they die of fever,
 seldom allows men to eat in idleness; so here,
 though there is nearly always sunshine, there are
 also such things as droughts which starve the
